@@ -393,6 +393,10 @@ Trunk -  Unreleased
     HIVE-1321. bugs with temp directories, trailing blank fields in HBase bulk load
     (John Sichi via namit)
 
+    HIVE-1325. dynamic partition insert should throw an exception if the number of target table
+    columns + dynamic partition columns does not equal to the number of select columns
+    (Ning Zhang via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
